--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lisa Gee",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6"
   }
